--- a/NuGet.Docs/_Layout.cshtml
+++ b/NuGet.Docs/_Layout.cshtml
@@ -75,6 +75,7 @@
     <script src="~/js/nuget.docs.js"></script>
     <script src="~/Scripts/nanoscoller.min.js"></script>
     <script src="~/scripts/highlight.pack.js"></script>
+    <script src="~/Scripts/clipboard.min.js"></script>
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
